// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test DpiInfo should render correctly 1`] = `
<div>
  <div
    class="container"
  >
    <i>
      Resolution
      : 
      125
       DPI
    </i>
  </div>
</div>
`;

exports[`test DpiInfo should render correctly 2`] = `
<div>
  <div
    class="container"
  >
    <i>
      Resolution
      : 
      500
       DPI
    </i>
  </div>
</div>
`;

exports[`test DpiInfo should render correctly in mobile 1`] = `
<div>
  <div
    class="container mobile"
  >
    <i>
      Resolution
      : 
      2000
       DPI
    </i>
  </div>
</div>
`;
